--- a/Bank/pom.xml
+++ b/Bank/pom.xml
@@ -7,6 +7,23 @@
   <version>1.0-SNAPSHOT</version>
   <name>Bank</name>
   <url>http://maven.apache.org</url>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+            <encoding>${project.build.sourceEncoding}</encoding>            
+            <executable>${env.JAVA_7_HOME}</executable>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,4 +32,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 </project>
