--- a/Supplier/pom.xml
+++ b/Supplier/pom.xml
@@ -7,10 +7,23 @@
   <version>1.0-SNAPSHOT</version>
   <name>Supplier</name>
   <url>http://maven.apache.org</url>
-  <properties>
-  <maven.compiler.source>1.7</maven.compiler.source>
-  <maven.compiler.target>1.7</maven.compiler.target>
-</properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+            <encoding>${project.build.sourceEncoding}</encoding>            
+            <executable>${env.JAVA_7_HOME}</executable>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
